<resources>
    <string name="app_name">TaskMaster</string>
    <string name="nic_tutaj_jeszcze_nie_ma">Nic tutaj jeszcze nie ma!</string>
    <string name="dodaj_pierwsze_zadanie">Dodaj\npierwsze zadanie</string>
    <string name="naci_nij_by_doda_pierwsze_zadanie">Naciśnij, by dodać pierwsze zadanie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="przewijana_lista_zada">Przewijana lista zadań</string>
    <string name="task_edit_dialog_title">Edytuj zadanie</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="taskName">taskName</string>
    <string name="done">done</string>
    <string name="not_done">not done</string>
    <string name="priority">priority</string>
    <string name="Priorytet">Priorytet</string>
    <string name="main_activity_must_implement_callbacks">MainActivity must implement callbacks</string>
    <string name="fragment_checkboxlist_args_error">Fragment_checkboxList args error!</string>
    <string name="first_task">Pierwsze zadanie</string>
    <string name="wprowad_nazw_zadania">Wprowadź nazwę zadania</string>
    <string name="nazwa">Nazwa</string>
    <string name="za_czniki">Załączniki</string>
    <string name="dodaj_z_cznik">Dodaj ząłącznik</string>
    <string name="priorityOutOfRangeErr">Priorytet musi być liczbą całkowitą z zakresu 1–10!</string>
    <string name="TaskMasterNotificationChannel">TaskMasterNotificationChannel</string>
    <string name="Masz_do_wykonania_zadanie">\"Masz do wykonania zadanie: \"</string>
    <string name="Kliknij_aby_zobaczyc_szczegoly">. Kliknij aby zobaczyć szczegóły</string>
    <string name="Kanal_powiadomien_aplikacji_TaskMaster">Kanał powiadomień aplikacji TaskMaster</string>
    <string name="przypomnienie">Przypomnienie</string>
    <string name="ostateczny_termin_wykonania">Ostateczny termin wykonania</string>
    <string name="nie_ustawiono">Nie ustawiono\ </string>
    <string name="ustaw_ostateczny_termin_wykonania">Ustaw ostateczny termin wykonania</string>
    <string name="TaskMasterPrefs">TaskMasterPrefs</string>
    <string name="naci_nij_aby_doda_zadanie">Naciśnij, aby dodać zadanie</string>
    <string name="usu_zadanie">Usuń zadanie</string>
    <string name="niebezpieczna_operacja">Niebezpieczna operacja</string>
    <string name="delete_task_confirmation_prompt">Czy na pewno chcesz usunąć zadanie? Ta operacja jest nieodwracalna!</string>
    <string name="usun">Usuń</string>
    <string name="prze_lij_zadania_z_pliku">Prześlij zadania z pliku</string>
    <string name="pobierz_zadania_do_pliku">Pobierz zadania do pliku</string>
    <string name="no_tasks_added_yet">Nie dodano jeszcze żadnego zadania!!</string>
    <string name="no_tasks_yet">Nie dodano jeszcze żadnego zadania!</string>
    <string name="file_saved_successfully">Plik zapisany pomyślnie!</string>
    <string name="sortuj_zadania">Sortuj zadania</string>
    <string name="wg_nazwy_malej_co">Wg. nazwy, malejąco</string>
    <string name="wg_nazwy_rosn_co">Wg. nazwy, rosnąco</string>
    <string name="wg_priorytetu_malej_co">Wg. priorytetu, malejąco</string>
    <string name="wg_statusu_najpierw_niewykonane">Wg. statusu, najpierw niewykonane</string>
    <string name="wg_statusu_najpierw_wykonane">Wg. statusu, najpierw wykonane</string>
    <string name="wg_priorytetu_rosn_co">Wg. priorytetu, rosnąco</string>
</resources>