<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout_editTaskDialog_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/textView_editTaskDialog_taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/nazwa"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_editTaskDialog_taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/wprowad_nazw_zadania"
            android:inputType="textPersonName"
            android:labelFor="@+id/textView_editTaskDialog_taskName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView_editTaskDialog_taskPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/Priorytet"
            android:textSize="18sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/numberPicker_editTaskDialog_taskPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/textView_editTaskDialog_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/ostateczny_termin_wykonania"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout_editTaskDialog_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_editTaskDialog_deadlineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/nie_ustawiono"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton_editTaskDialog_setDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/ustaw_ostateczny_termin_wykonania"
                android:cropToPadding="false"
                android:focusable="true"
                app:backgroundTint="@android:color/transparent"
                app:elevation="0dp"
                app:fabCustomSize="40dp"
                app:maxImageSize="40dp"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_editTaskDialog_setReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:text="@string/przypomnienie"
            android:textColor="#757575"
            android:textSize="18sp"
            android:textStyle="bold"
            app:switchPadding="10dp" />

        <TextView
            android:id="@+id/textView_editTaskDialog_attachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/za_czniki"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_editTaskDialog_attachmentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton_editTaskDialog_addAttachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:clickable="true"
                android:contentDescription="@string/dodaj_z_cznik"
                android:cropToPadding="false"
                android:focusable="true"
                app:backgroundTint="@android:color/transparent"
                app:elevation="0dp"
                app:fabCustomSize="40dp"
                app:maxImageSize="40dp"
                app:rippleColor="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_menu_add"
                app:useCompatPadding="false" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</ScrollView>